--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-testing",
+  "name": "passport-example",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,15 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.1",
     "faker": "^4.1.0",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.10.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.7.0"
