--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "./node_modules/.bin/mocha --timeout 10000 --exit"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
